# mymath

./: .gitignore  CMakeLists.txt  compile  run
include/: common.h  matrix.h  program.h  scalar.h  vector.h
src/: CMakeLists.txt  avg.c  cbrt.c  cosh.c  cub.c  entropy.c  exp.c  fabs.c  floor.c  gcd.c  ln.c  log.c  log10.c  log2.c  logbase.c  main.c  matrix.c  max.c  median.c  min.c  mode.c  pow.c  prime.c  relu.c  rng.c  root.c  sem.c  sigmoid.c  sinh.c  skew.c  sqr.c  sqrt.c  stddev.c  tanh.c  variance.c  vector.c
test/: CMakeLists.txt  cbrt_test.c  cosh_test.c  cub_test.c  exp_test.c  fabs_test.c  floor_test.c  gcd_test.c  log10_test.c  log2_test.c  log_test.c  sinh_test.c  sqr_test.c  sqrt_test.c  tanh_test.c
test/benchmark/: CMakeLists.txt  cbrt_test.cpp  cosh_test.cpp  cub_test.cpp  exp_test.cpp  fabs_test.cpp  floor_test.cpp  pow_test.cpp  sinh_test.cpp
test/include/: wrapper.h
test/lib/: wrapper.c
